--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -183,26 +183,6 @@
       vertical-align: bottom;
     }
 
-    .textarea-wrapper {
-      height: 100%;
-      padding-bottom: 62px;
-    }
-
-    .form-input.textarea {
-      height: 100%;
-      height: 300px\9;
-      margin: 0;
-    }
-
-    .notice-prompt-info {
-      &:before {
-        content: "(";
-      }
-      &:after {
-        content: ")";
-      }
-
-    }
     .form-grid {
       display: table;
       height: 100%;
@@ -218,14 +198,17 @@
         }
       }
       .row.textarea-wrapper {
+        height: 100%;
         .col--vertical {
-          height: 100%
+          height: 100%;
+          padding-bottom: 60px;
         }
         .col-1 {
           height: 100%;
-          padding-bottom: 30px;
           textarea {
             height: 100%;
+            height: 300px\9;
+            box-sizing: border-box;
           }
         }
       }
