Safety commit to get TAGS working.

--- a/resources/private/common-html/sass/views/_authority_admin.scss
+++ b/resources/private/common-html/sass/views/_authority_admin.scss
@@ -58,3 +58,14 @@ table.admin-settings {
   /* cover the tabs*/
   margin-top: -38px;
 }
+
+// Guest authorities
+.guest-authorities {
+  margin-top: 1em;
+}
+
+
+.form-input--inline {
+  @extend .form-input;
+  display: inline-block;
+}
