refactor notice component to use new side panel service

--- a/resources/private/common-html/sass/views/_side_panel.scss
+++ b/resources/private/common-html/sass/views/_side_panel.scss
@@ -159,6 +159,10 @@
   #notice-panel {
     height: 100%;
 
+    .notice-component {
+      height: 100%;
+    }
+
     .application-urgency {
       width: 215px;
       position: relative;
