Authority admin UI for guest authorities.

--- a/resources/private/common-html/sass/views/_authority_admin.scss
+++ b/resources/private/common-html/sass/views/_authority_admin.scss
@@ -73,3 +73,8 @@ table.admin-settings {
 .form-input--error {
   border-color: red;
 }
+
+.form-error-message {
+  padding: 2px 2px 2px 2px;
+  color: red;
+}
